--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-jss": "^10.9.2",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
