--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.1",
+    "chart.js": "^4.2.1",
     "html-react-parser": "^3.0.9",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.9.2",
     "react-router-dom": "^6.8.0",
